testsuite/tests/builtins/img/missing_param/test.out
Error: No value for parameter
   ╭─[ <working-dir>/script.lkql:1:1 ]
   │
 1 │ img()
   │ ──┬──  
   │   ╰──── Missing value for the "value" parameter
───╯
